...
            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Flaming Tiger Pearl Milk"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:id="@+id/editTextText4"
                android:layout_width="262dp"
                android:layout_height="92dp"
                android:ems="10"
                android:inputType="text"
                android:paddingTop="10dp"
                android:text="Signature" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
...
