...
                        }
                    }
                } else { //if multiple options are allowed, show checkboxes
                    //MultipleChoiceCheckBox(navController, appViewModel, modifierData, choices)
                    Column {
                        Text(
                            text = modifierData.name, //Display name of modification type (Ex.: "Toppings", "Sugar Level", "Ice Level", "Milk")
                            modifier = Modifier
                                .testTag(modifierData.name.lowercase() + "_choice"),
                            fontSize = 20.sp,
                            fontWeight = FontWeight.Bold,
                            fontFamily = FontFamily.SansSerif,
                        )
...
                                var checked by remember {
                                    println("[$index] ptrToChoices.indexOf(choiceData) : ${ptrToChoices?.indexOf(choiceData)!!}")
                                    mutableStateOf(ptrToChoices.indexOf(choiceData) > -1)
                                }

                                Checkbox(
                                    modifier = Modifier.testTag("choice"),
                                    checked = checked,
                                    onCheckedChange = { isChecked ->
                                        checked = isChecked
                                        if(checkedChoicesCounter >= maxCheckChoices){
                                            checked = false
                                        }
...
