<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="homepage_route">Home</string>
    <string name="menupage_route">Menu</string>
    <string name="rewardpage_route">Rewards</string>
    <string name="accountpage_route">Account</string>
    <string name="todo">TODO</string>
</resources>